--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -131,3 +131,15 @@ data:
     host: localhost:5000
     hostFromClusterNetwork: k3d-registry:5000
     hostFromContainerRuntime: k3d-registry:5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: wireguard
+spec:
+  selector:
+    app: dev
+  ports:
+    - protocol: UDP
+      port: 51820
+      targetPort: 51820
