--- a/wg0.conf
+++ b/wg0.conf
@@ -1,12 +1,10 @@
 [Interface]
-Address = 172.16.16.0/20
-ListenPort = 51820
-PrivateKey = OIviMX9BPHk1w/bvsXW0Qc2/mY3+HS3iS31aEtsn+Uc=
-PostUp = iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o ENI -j MASQUERADE
-PostUp = sysctl -w -q net.ipv4.ip_forward=1
-PostDown = iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o ENI -j MASQUERADE
-PostDown = sysctl -w -q net.ipv4.ip_forward=0
+PrivateKey = oG2sa0u9qJGWGC8+vtXRsLtI0IxXKtaYzGlpPzqD91k=
+Address = 172.16.16.10/20
+DNS = 1.1.1.1
 
 [Peer]
-PublicKey = AOIzLd2C71DtY8DWgUfuMllRNa0iR1O3tO2WbFO7ICU=
-AllowedIPs = 172.16.16.10
+PublicKey = CSB59ZuD/YVwKWRpVfRpzhirVxfAr36E5770/JDqDx4=
+AllowedIPs = 0.0.0.0/0
+Endpoint = 169.254.32.1:51820
+PersistentKeepalive = 25
