--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -84,6 +84,7 @@ spec:
           command: ["/usr/bin/tini", "--"]
           ports:
           - containerPort: 51820
+            hostPort: 51820
             protocol: UDP
             name: wireguard
           securityContext:
