--- a/Makefile.common
+++ b/Makefile.common
@@ -176,6 +176,7 @@ cluster-inner:
 		-p "10009:10009@server:0" \
 		-p "51820:51820/udp@server:0" \
 		--k3s-arg "--disable=traefik@all"
+	docker update --restart=no k3d-k3s-default-server-0
 	docker exec k3d-k3s-default-server-0 touch /etc/passwd
 	kubectl apply -f k/dev/main.yaml
 	while true; do if kubectl rollout status statefulset dev --watch; then break; fi; sleep 5; done
