fix admin check

--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -8,7 +8,8 @@ helmCharts:
   repo: https://charts.konghq.com
   valuesInline:
     admin:
-      tls: {}
+      tls:
+        parameters: []
     portalapi:
       enabled: false
     portal:
