make registry with cluster

--- a/Makefile.common
+++ b/Makefile.common
@@ -144,6 +144,7 @@ cluster:
 
 cluster-inner:
 	$(MAKE) dummy
+	$(MAKE) registry
 	-k3d cluster delete
 	k3d cluster create --config k3d.yaml \
 		--registry-use registry \
