make update-amd push-amd

--- a/Makefile.site
+++ b/Makefile.site
@@ -69,11 +69,11 @@ updates:
 updates-inner:
 	earthly --remote-cache=$(cache)defn/cache:updates $(push) +updates --repo=$(repo) --repo_from=$(repo_from)
 
-updates-amd:
+update-amd:
 	git push
 	if [[ -d work/dev ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
-updates-amd-inner:
+update-amd-inner:
 	earthly --remote-cache=$(cache)defn/cache:updates $(push) +amd64-update --repo=$(repo) --repo_from=$(repo_from)
 
 push:
