--- a/Makefile.site
+++ b/Makefile.site
@@ -47,14 +47,9 @@ recreate: # Recreate pod
 stop: # Stop k3d
 	k3d cluster stop
 
-images image-amd image-arm:
+image-amd image-arm:
 	git push
 	if [[ -d work/dev ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
-
-images-inner:
-	earthly --remote-cache=$(cache)defn/cache:images $(push) +amd64 --repo=$(repo)
-	earthly --remote-cache=$(cache)defn/cache:images $(push) +arm64 --repo=$(repo)
-	earthly --remote-cache=$(cache)defn/cache:images $(push) +images --repo=$(repo)
 
 image-amd-inner:
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +amd64 --repo=$(repo)
@@ -62,25 +57,21 @@ image-amd-inner:
 image-arm-inner:
 	earthly --remote-cache=$(cache)defn/cache:images $(push) +arm64 --repo=$(repo)
 
-updates:
-	git push
-	if [[ -d work/dev ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
-
-updates-inner:
-	earthly --remote-cache=$(cache)defn/cache:updates $(push) +updates --repo=$(repo) --repo_from=$(repo_from)
-
-update-amd:
+update-amd update-arm:
 	git push
 	if [[ -d work/dev ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
 update-amd-inner:
 	earthly --remote-cache=$(cache)defn/cache:updates $(push) +amd64-update --repo=$(repo) --repo_from=$(repo_from)
 
-push:
-	$(MAKE) updates repo= repo_from=k3d-registry:5000/ cache=k3d-registry:5000/
+update-arm-inner:
+	earthly --remote-cache=$(cache)defn/cache:updates $(push) +arm64-update --repo=$(repo) --repo_from=$(repo_from)
 
 push-amd:
 	$(MAKE) updates-amd repo= repo_from=k3d-registry:5000/ cache=k3d-registry:5000/
+
+push-arm:
+	$(MAKE) updates-arm repo= repo_from=k3d-registry:5000/ cache=k3d-registry:5000/
 
 shell:
 	docker run --rm -ti $(repo)defn/dev bash -l
