delete images after importing

--- a/Makefile.site
+++ b/Makefile.site
@@ -9,6 +9,8 @@ import:
 	docker pull defn/dev
 	docker tag defn/dev localhost:5000/defn/dev
 	docker push localhost:5000/defn/dev
+	docker rmi defn/dev
+	docker rmi localhost:5000/defn/dev
 
 reset: # Reset cluster
 	-k3d cluster delete
