--- a/Makefile.common
+++ b/Makefile.common
@@ -6,6 +6,7 @@ dummy_ip ?= 169.254.32.1
 dummy_host ?= remocal.net
 workdir ?= /home/ubuntu
 tilt_port ?= 10350
+k3d_name ?= default
 
 trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
@@ -84,10 +85,10 @@ sync:
 
 	argocd --kube-context argocd app sync argo-workflows --local k/argo-workflows --assumeYes --prune
 	argocd --kube-context argocd app wait argo-workflows
-	
+
 	argocd --kube-context argocd app sync argo-events --local k/argo-events --assumeYes --prune
 	argocd --kube-context argocd app wait argo-events
-	
+
 	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
 	argocd --kube-context argocd app wait loft
 	kubectl --context pod apply -f k/admin.yaml
@@ -152,7 +153,7 @@ clean:
 	touch ~/.registry.txt
 
 attach:
-	code --folder-uri vscode-remote://k8s-container+context=k3d-k3s-default+namespace=default+podname=dev-0+name=dev+$(workdir)
+	code --folder-uri vscode-remote://k8s-container+context=k3d-k3s-$(k3d_name)+namespace=default+podname=dev-0+name=dev+$(workdir)
 	-kubectl get events -w
 
 attach-remo:
@@ -164,8 +165,9 @@ cluster:
 
 cluster-inner:
 	$(MAKE) registry
-	-k3d cluster delete
-	k3d cluster create --config k3d.yaml \
+	-k3d cluster delete $(k3d_name)
+	k3d cluster create $(k3d_name) \
+		--config k3d.yaml \
 		--registry-use registry \
 		-p    "80:8000@server:0" \
 		-p   "443:9701@server:0" \
@@ -197,8 +199,8 @@ cluster-inner:
 		-p "10009:10009@server:0" \
 		-p "51820:51820/udp@server:0" \
 		--k3s-arg "--disable=traefik@all"
-	docker update --restart=no k3d-k3s-default-server-0
-	docker exec k3d-k3s-default-server-0 touch /etc/passwd
+	docker update --restart=no k3d-k3s-$(k3d_name)-server-0
+	docker exec k3d-k3s-$(k3d_name)-server-0 touch /etc/passwd
 	kubectl apply -f k/dev/main.yaml
 	while true; do if kubectl rollout status statefulset dev --watch; then break; fi; sleep 5; done
 
@@ -246,7 +248,7 @@ monitor:
 		if test -f ~/.alive && test "$$(find ~/.alive -mmin +120)"; then \
 			~/bin/e $(MAKE) down; \
 		fi
-		
+
 kumacp:
 	env \
 		KUMA_MODE=zone KUMA_MULTIZONE_ZONE_NAME="$$(uname -n)" \
