--- a/Makefile.common
+++ b/Makefile.common
@@ -153,7 +153,7 @@ clean:
 	touch ~/.registry.txt
 
 attach:
-	code --folder-uri vscode-remote://k8s-container+context=k3d-k3s-$(k3d_name)+namespace=default+podname=dev-0+name=dev+$(workdir)
+	code --folder-uri vscode-remote://k8s-container+context=k3d-$(k3d_name)+namespace=default+podname=dev-0+name=dev+$(workdir)
 	-kubectl get events -w
 
 attach-remo:
@@ -199,8 +199,8 @@ cluster-inner:
 		-p "10009:10009@server:0" \
 		-p "51820:51820/udp@server:0" \
 		--k3s-arg "--disable=traefik@all"
-	docker update --restart=no k3d-k3s-$(k3d_name)-server-0
-	while true; do if docker exec k3d-k3s-$(k3d_name)-server-0 touch /etc/passwd; then break; fi; sleep 1; done
+	docker update --restart=no k3d-$(k3d_name)-server-0
+	docker exec k3d-$(k3d_name)-server-0 touch /etc/passwd
 	kubectl apply -f k/dev/main.yaml
 	while true; do if kubectl rollout status statefulset dev --watch; then break; fi; sleep 5; done
 
