use the do token

--- a/packer/Makefile
+++ b/packer/Makefile
@@ -4,7 +4,7 @@ menu:
 	@perl -ne 'printf("%10s: %s\n","$$1","$$2") if m{^([\w+-]+):[^#]+#\s(.+)$$}' Makefile
 
 do: # Build DigitalOcean image
-	packer build -color=true -timestamp-ui=true $@.pkr.hcl
+	env DIGITALOCEAN_TOKEN="$$(pass DIGITALOCEAN_TOKEN)" packer build -color=true -timestamp-ui=true $@.pkr.hcl
 
 fmt: # Format packer configs
 	packer fmt -write=true .
