--- a/k3d.yaml
+++ b/k3d.yaml
@@ -2,6 +2,10 @@ apiVersion: k3d.io/v1alpha4
 kind: Simple
 servers: 1
 agents: 0
+kubeAPI:
+  host: "myhost.my.domain"
+  hostIP: "0.0.0.0"
+  hostPort: "6443"
 image: rancher/k3s:v1.24.3-k3s1
 volumes:
   - volume: /var/run/docker.sock:/var/run/docker.sock
