--- a/Makefile.site
+++ b/Makefile.site
@@ -93,4 +93,8 @@ cert:
 	rm -f meh.json
 
 provision-digital-ocean:
-	@true
+	@git remote rm origin
+	@git remote add origin git@github.com:defn/dev
+	@git fetch origin
+	@git branch --set-upstream-to main
+
