--- a/Makefile.site
+++ b/Makefile.site
@@ -96,5 +96,5 @@ provision-digital-ocean:
 	@git remote rm origin
 	@git remote add origin git@github.com:defn/dev
 	@git fetch origin
-	@git branch --set-upstream-to main
+	@git branch --set-upstream-to origin/main
 
