--- a/Makefile.common
+++ b/Makefile.common
@@ -45,7 +45,8 @@ init:
 	$(MAKE) init-inner
 
 init-inner:
-	tilt up --context pod --port $(tilt_port)
+	set -x; if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
+	echo env DEFN_DEV_HOST="$(uname -n).tiger-mamba.ts.net" DEFN_DEV_IP="$(tailscale ip -4)" tilt up --context pod --port $(tilt_port)
 
 init-dev:
 	-kubectl --context pod create namespace argocd
