--- a/Makefile.common
+++ b/Makefile.common
@@ -164,9 +164,10 @@ cluster:
 
 cluster-inner:
 	$(MAKE) registry
+	echo $(k3d_name) $(uname -n); sleep 60
 	-k3d cluster delete $(k3d_name)
 	if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
-	env DEFN_DEV_HOST="$$(uname -n).tiger-mamba.ts.net" DEFN_DEV_IP="$$(tailscale ip -4)" \
+	env DEFN_DEV_HOST="$(k3d_name).tiger-mamba.ts.net" DEFN_DEV_IP="$$(tailscale ip -4)" \
 		k3d cluster create $(k3d_name) \
 		--config k3d.yaml \
 		--registry-use registry \
