--- a/Makefile.common
+++ b/Makefile.common
@@ -94,6 +94,7 @@ sync:
 	loft login https://loft.loft.svc.cluster.local --insecure --access-key admin
 
 	$(MAKE) vc0
+	$(MAKE) vc1
 
 	kubectl --context argocd apply -f k/sets.yaml
 	sleep 5
