--- a/k/sets/dev.yaml
+++ b/k/sets/dev.yaml
@@ -30,6 +30,9 @@ spec:
           - name: vc0
             namespace: vc0
             cluster: in-cluster
+          - name: vc1
+            namespace: vc1
+            cluster: in-cluster
   template:
     metadata:
       name: "{{name}}"
