make the cert after traefik is up

--- a/Makefile.common
+++ b/Makefile.common
@@ -81,6 +81,7 @@ sync:
 
 	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
 	argocd --kube-context argocd app wait traefik
+	$(MAKE) cert
 
 	argocd --kube-context argocd app sync argo-workflows --local k/argo-workflows --assumeYes --prune
 	argocd --kube-context argocd app wait argo-workflows
