--- a/tf/Makefile
+++ b/tf/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
 
-# export DIGITALOCEAN_ACCESS_TOKEN="$(pass DIGITALOCEAN_ACCESS_TOKEN)
+# export DIGITALOCEAN_ACCESS_TOKEN="$(pass DIGITALOCEAN_ACCESS_TOKEN)"
 # export TF_TOKEN_app_terraform_io="$(pass TF_TOKEN_app_terraform_io)"
 
 test:
