--- a/tf/Makefile
+++ b/tf/Makefile
@@ -3,6 +3,8 @@ SHELL := /bin/bash
 # export DIGITALOCEAN_ACCESS_TOKEN="$(pass DIGITALOCEAN_ACCESS_TOKEN)"
 # export TF_TOKEN_app_terraform_io="$(pass TF_TOKEN_app_terraform_io)"
 
+# doctl kubernetes cluster kubeconfig save remo
+
 test:
 	$(MAKE) fmt
 	$(MAKE) validate
