--- a/Makefile.site
+++ b/Makefile.site
@@ -81,6 +81,12 @@ push-amd:
 push-arm:
 	$(MAKE) update-arm repo= repo_from=localhost:5000/ cache=localhost:5000/
 
+push-amd-cache:
+	$(MAKE) update-amd repo= repo_from=localhost:5000/ cache=
+
+push-arm-cache:
+	$(MAKE) update-arm repo= repo_from=localhost:5000/ cache=
+
 shell:
 	docker run --rm -ti $(repo)defn/dev bash -l
 
