--- a/Makefile.site
+++ b/Makefile.site
@@ -57,33 +57,27 @@ stop: # Stop k3d
 
 initial-amd initial-arm:
 	git push
-	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@-inner cache=; else $(MAKE) $@-inner; fi
-
-initial-amd-inner:
-	earthly --remote-cache=$(cache)defn/cache $(push) +amd64 --repo=$(repo)
-
-initial-arm-inner:
-	earthly --remote-cache=$(cache)defn/cache $(push) +arm64 --repo=$(repo)
+	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) image-inner cache=; else $(MAKE) image-inner; fi
 
 image-amd image-arm:
 	git push
 	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
 image-amd-inner:
-	earthly --remote-cache=$(cache)defn/cache $(push) +amd64 --repo=$(repo)
+	earthly --remote-cache=$(cache)defn/cache:images $(push) +amd64 --repo=$(repo)
 
 image-arm-inner:
-	earthly --remote-cache=$(cache)defn/cache $(push) +arm64 --repo=$(repo)
+	earthly --remote-cache=$(cache)defn/cache:images $(push) +arm64 --repo=$(repo)
 
 update-amd update-arm:
 	git push
 	if [[ "$(shell pwd)" == "$(HOME)" ]]; then cd work/dev && git pull && $(MAKE) $@-inner; else $(MAKE) $@-inner; fi
 
 update-amd-inner:
-	earthly --remote-cache=$(cache)defn/cache $(push) +amd64-update --repo=$(repo) --repo_from=$(repo_from)
+	earthly --remote-cache=$(cache)defn/cache:updates $(push) +amd64-update --repo=$(repo) --repo_from=$(repo_from)
 
 update-arm-inner:
-	earthly --remote-cache=$(cache)defn/cache $(push) +arm64-update --repo=$(repo) --repo_from=$(repo_from)
+	earthly --remote-cache=$(cache)defn/cache:updates $(push) +arm64-update --repo=$(repo) --repo_from=$(repo_from)
 
 push-amd:
 	$(MAKE) update-amd repo= repo_from=localhost:5000/ cache=localhost:5000/
