--- a/Makefile.site
+++ b/Makefile.site
@@ -80,10 +80,10 @@ update-arm-inner:
 	earthly --remote-cache=$(cache)defn/cache:updates $(push) +arm64-update --repo=$(repo) --repo_from=$(repo_from)
 
 push-amd:
-	$(MAKE) update-amd repo= repo_from=localhost:5000/ cache=localhost:5000/
+	$(MAKE) update-amd repo= repo_from=localhost:5000/ cache=
 
 push-arm:
-	$(MAKE) update-arm repo= repo_from=localhost:5000/ cache=localhost:5000/
+	$(MAKE) update-arm repo= repo_from=localhost:5000/ cache=
 
 push-amd-cache:
 	$(MAKE) image-amd repo= repo_from=localhost:5000/ cache=
