--- a/.earthly/config.yaml
+++ b/.earthly/config.yaml
@@ -3,4 +3,5 @@ global:
   disable_log_sharing: true
   buildkit_host: tcp://dev-0:8372
   buildkit_max_parallelism: 4
+  cache_size_pct: 90
   secret_provider: earthly-secret-provider
