--- a/Makefile.common
+++ b/Makefile.common
@@ -7,6 +7,7 @@ workdir ?= /home/ubuntu
 tilt_port ?= 10350
 k3d_name ?= $(shell uname -n)
 context ?= "k3d-$(k3d_name)"
+podname ?= "dev-0"
 
 trust-ca:
 	sudo security add-trusted-cert -d -r trustRoot -k ~/Library/Keychains/login.keychain-db etc/ca.crt
@@ -149,7 +150,7 @@ clean:
 	touch ~/.registry.txt
 
 attach:
-	code --folder-uri vscode-remote://k8s-container+context=$(context)+namespace=default+podname=dev-0+name=dev+$(workdir)
+	code --folder-uri vscode-remote://k8s-container+context=$(context)+namespace=default+podname=$(podname)+name=dev+$(workdir)
 	-kubectl get events -w
 
 attach-remo:
