fix name of config

--- a/.earthly/config.yaml
+++ b/.earthly/config.yaml
@@ -1,5 +1,5 @@
 global:
   disable_analytics: true
   disable_log_sharing: true
-  buildkit_host: tcp://dev-0:8372
+  buildkit_host: tcp://defn-0:8372
   secret_provider: earthly-secret-provider
